# block-spmv

./: CMakeLists.txt  bench.cpp  bench_BB.cpp  vexcl_ell_public_data.patch
